<resources>
    <string name="app_name">sol</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_package">Package</string>
    <string name="label_cabana">Cabana</string>
    <string name="action_book">Book</string>
    <string name="label_fullname">Fullname</string>
    <string name="label_phone">Phone</string>
    <string name="label_access">Access Type</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_cabana_quantity">Cabana Quantity</string>
    <string name="label_package_quantity">Package Quantity</string>
    <string name="summary">Total:  %1$d </string>
    <string name="value_one">1</string>
    <string name="value_zero">0</string>
    <string name="clock_in">Clock-In</string>
    <string name="label_booking">Booking</string>
    <string name="caption_no_data">No records found.</string>
    <string name="action_scan">Scan</string>
    <string name="action_export">Export</string>
    <string name="action_members">Members</string>
    <string name="label_clock_ins">Clock Ins</string>
    <string name="label_members">Members</string>
    <string name="prompt_code">Card Number</string>
    <string name="action_verify">Verify</string>
    <string name="confirm_title">Data Sync</string>
    <string name="confirm_message">Load data from server and update local records.</string>
    <string name="action_sync">Sync</string>
    <string name="dashboard">Dashboard</string>
    <string name="last_10_bookings">Last 10 Bookings</string>
    <string name="total_clock_ins">Total Clock-Ins: %1$d</string>
    <string name="label_total_tickets">Total Bookings: %1$d</string>
    <string name="label_tickets">Tickets</string>
    <string name="action_upload">Upload</string>
    <string name="upload_title">Post data?</string>
    <string name="upload_message">This will send all the local Tickets to remote Server.</string>
    <string name="view">View</string>
    <string name="action_connect_printer">Connect Printer</string>
    <string name="additional_packages">Additional packages</string>
    <string name="action_logout">Logout</string>
    <string name="action_confirm">Confirm</string>
    <string name="prompt_qr">QR code</string>
    <string name="action_delete">Delete</string>
    <string name="delete_title">Delete Tickets?</string>
    <string name="delete_message">Make sure you already sync the Data with the Remote Server to prevent Data lost.</string>
</resources>